derive/tests/snapshots/singleton_with_uuid_foreign_key/Bracket/get_all_brackets.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `bracket` table.
    pub fn get_all_brackets<'a>(&'a self) -> impl Iterator<Item = Bracket> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().bracket().iter()
    }
}
