derive/tests/snapshots/singleton_with_uuid_foreign_key/Bracket/get_bracket_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Bracket` from the `bracket` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_bracket_by_id<'a>(
        &'a self,
        id: impl Into<BracketId> + Clone,
    ) -> Result<Bracket, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().bracket().id().find(id.clone().into().value()) {
            Some(bracket) => Ok(bracket),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "bracket".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Bracket` from the `bracket` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_bracket_by_id<'a>(
        &'a self,
        id: impl Into<BracketId> + Clone,
    ) -> Result<Bracket, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().bracket().id().find(id.clone().into().value()) {
            Some(bracket) => Ok(bracket),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "bracket".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
