derive/tests/snapshots/singleton_with_uuid_foreign_key/Bracket/table.snap
---
source: derive/src/characterization_tests.rs
---
// Documentation appended to the struct:
///
/// # Tables referencing the `bracket` table
///
/// - the `active_bracket` table (`self`)

pub trait this_compilation_error_occurs_because_the_bracket_table_is_not_deletable_or_has_no_referenced_by_attribute_referencing_the_active_bracket_table {}
pub trait this_compilation_error_occurs_because_your_foreign_key_referencing_the_bracket_table_needs_to_define_a_strategy_for_on_soft_delete_or_the_bracket_table_has_no_referenced_by_attribute_referencing_the_active_bracket_table {}
const _: () = {
    use self::this_compilation_error_occurs_because_the_active_bracket_table_has_no_foreign_key_attribute_referencing_the_bracket_table;
};
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct BracketId {
    value: Uuid,
}
impl BracketId {
    /// Generate a random UUID v4.
    pub fn v4(
        dsl: &crate::spacetimedsl::DSL<'_, impl crate::spacetimedsl::WriteContext>,
    ) -> Result<Self, crate::spacetimedsl::error::SpacetimeDSLError> {
        Ok(Self {
            value: crate::spacetimedsl::NewUUID::new_uuid_v4(dsl.ctx())?,
        })
    }
    /// Generate a UUID v7, which sorts in the order the values were generated.
    pub fn v7(
        dsl: &crate::spacetimedsl::DSL<'_, impl crate::spacetimedsl::WriteContext>,
    ) -> Result<Self, crate::spacetimedsl::error::SpacetimeDSLError> {
        Ok(Self {
            value: crate::spacetimedsl::NewUUID::new_uuid_v7(dsl.ctx())?,
        })
    }
}
impl std::fmt::Display for BracketId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "BracketId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<Uuid> for BracketId {
    fn new(value: Uuid) -> Self {
        Self { value }
    }
    fn value(&self) -> Uuid {
        self.value.clone()
    }
}
impl From<&Bracket> for BracketId {
    fn from(value: &Bracket) -> Self {
        BracketId {
            value: value.id.clone(),
        }
    }
}
impl From<&Bracket> for Option<BracketId> {
    fn from(value: &Bracket) -> Option<BracketId> {
        Some(BracketId {
            value: value.id.clone(),
        })
    }
}
impl From<&BracketId> for Option<BracketId> {
    fn from(value: &BracketId) -> Option<BracketId> {
        use crate::spacetimedsl::Wrapper;
        Some(BracketId::new(value.value()))
    }
}
impl From<&BracketId> for BracketId {
    fn from(value: &BracketId) -> Self {
        use crate::spacetimedsl::Wrapper;
        BracketId::new(value.value())
    }
}
impl Bracket {
    ///
    pub fn get_id(&self) -> BracketId {
        use crate::spacetimedsl::Wrapper;
        BracketId::new(self.id.clone())
    }
    ///
    pub fn get_name(&self) -> &String {
        use crate::spacetimedsl::Wrapper;
        &self.name
    }
    ///
    pub fn get_name_mut(&mut self) -> &mut String {
        use crate::spacetimedsl::Wrapper;
        &mut self.name
    }
    ///
    pub fn set_name(&mut self, name: String) -> String {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.name, name);
        old_value
    }
}
///
pub struct CreateBracket {
    pub name: String,
}

// Generated DSL methods:
// count_of_all_brackets
// create_bracket
// delete_bracket_by_id
// execute_on_delete_strategies_of_referencing_tables_after_multiple_rows_of_the_bracket_table_were_deleted
// execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_bracket_table_was_deleted
// get_all_brackets
// get_bracket_by_id
// update_bracket_by_id
