derive/tests/snapshots/singleton_with_uuid_foreign_key/Bracket/update_bracket_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `Bracket` row of the `bracket` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn update_bracket_by_id<'a>(
        &'a self,
        bracket: Bracket,
    ) -> Result<Bracket, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let mut bracket = bracket;
        let bracket = self.db().bracket().id().update(bracket);
        Ok(bracket)
    }
}
